# cfl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cfl3.cpp  cfl3.h  cfl3_delta16.cpp  cfl3_delta32.cpp  cfl3_delta8.cpp  cfl3_none.cpp  cfl3_zlib.cpp  changes.txt  makecfl.cpp  testcfl.cpp
contrib/uncfl/: CHANGES  TODO  uncfl.cpp
example/: hello.cpp  hello.ini  readme.txt  vcmake.bat
include/: CFL.h  CFLDirectoryEntry.h  CFLEnumerator.h  CFLEnums.h  CFLLibrary.h  CFLMaker.h  CFLResource.h  CFLResourceFilter.h
makecfl/: makecfl.cpp  tokenwad.cpp  tokenwad.h
src/: CFL.cpp  CFLDirectoryEntry.cpp  CFLLibrary.cpp  CFLMaker.cpp  CFLResource.cpp  CFLResourceFilter.cpp  CFL_delta16.cpp  CFL_delta32.cpp  CFL_delta8.cpp  CFL_none.cpp  CFL_zlib.cpp
testcfl/: testcfl.cpp
